# rig-openapi-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  openapi.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: context.rs  jsonplaceholder.rs  openapi.yaml  petstore.rs
src/: extract.rs  lib.rs  main.rs  resolve.rs  tool.rs
tests/: auth.rs  large_specs.rs
