[package]
name = "rig-openapi-tools"
version = "0.1.0"
edition = "2021"
description = "Turn any OpenAPI spec into LLM-callable tools for rig"
license = "MIT"
repository = "https://github.com/sergeikharchikov/rig-openapi-tools"
keywords = ["openapi", "llm", "rig", "agent", "tools"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[dependencies]
rig-core = "0.32"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
openapiv3 = "0.5"
anyhow = "1"
